--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - ./proxy-wide.conf:/etc/nginx/conf.d/proxy-wide.conf:ro
+      - ../certs/domains:/etc/nginx/certs
     networks:
       - nginx_proxy_network
 
